# dataroller

./: .gitignore  Makefile.am  README.md  build.sh  clean.sh  configure.ac  debug.sh  test_compressor.sh  test_profile.sh  test_valgrind.sh
src/: bitio.c  bitio.h  compress_lzw.c  compress_lzw.h  decompress_lzw.c  decompress_lzw.h  file.c  file.h  main.c  shared.c  shared.h  timer.c  timer.h
src/test/: bitio_read_test.c  bitio_write_test.c
